--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -173,9 +173,6 @@
   <data name="First_name_word" xml:space="preserve">
     <value>First Name</value>
   </data>
-  <data name="OfflineMap" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\OfflineMap.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="No_Locate_FSassets" xml:space="preserve">
     <value>Cannot locate FSasset folder:</value>
   </data>
@@ -3125,12 +3122,6 @@
   <data name="NVPhysPrim" xml:space="preserve">
     <value>Not a valid Physical Prim Max Value. Must be greater than 0.</value>
   </data>
-  <data name="package1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\package1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="package_add1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\package_add1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="package_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\package_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -3154,5 +3145,8 @@
   </data>
   <data name="tables" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tables.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Window_Word" xml:space="preserve">
+    <value>Window</value>
   </data>
 </root>
