--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -1139,7 +1139,7 @@
     <value>Common Settings</value>
   </data>
   <data name="MetroOrg" xml:space="preserve">
-    <value>Hypergrid.org Region Server</value>
+    <value>Metro.land Region Server</value>
   </data>
   <data name="FAC" xml:space="preserve">
     <value>Flotsam Asset Cache</value>
