--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3149,4 +3149,7 @@
   <data name="Window_Word" xml:space="preserve">
     <value>Window</value>
   </data>
+  <data name="Outworldz_ad_by_Marianna_Monentes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Outworldz ad by Marianna Monentes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
