--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3152,4 +3152,16 @@
   <data name="Outworldz_ad_by_Marianna_Monentes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Outworldz ad by Marianna Monentes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Copy_Word" xml:space="preserve">
+    <value>Copy</value>
+    <comment>yes</comment>
+  </data>
+  <data name="Modify_word" xml:space="preserve">
+    <value>Modify</value>
+    <comment>yes</comment>
+  </data>
+  <data name="Transfer_word" xml:space="preserve">
+    <value>Transfer</value>
+    <comment>yes</comment>
+  </data>
 </root>
