--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3246,4 +3246,8 @@
   <data name="package_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\package_ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Announce_visitors" xml:space="preserve">
+    <value>Announce Visitors</value>
+    <comment>yes</comment>
+  </data>
 </root>
