--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -1040,7 +1040,7 @@
     <value>Open Router Ports using Universal Plug and Play</value>
   </data>
   <data name="Click_Regions" xml:space="preserve">
-    <value>Click to set up  Regions</value>
+    <value>Click to set up basic Region options.</value>
   </data>
   <data name="Preview_in_Browser" xml:space="preserve">
     <value>Preview in Browser</value>
@@ -1223,7 +1223,7 @@
     <value>Click to set up your Web Control Panel</value>
   </data>
   <data name="Click_Maps" xml:space="preserve">
-    <value>Click to set up Maps</value>
+    <value>Click to set up Maps, clear maps,  or choose map types</value>
   </data>
   <data name="Help_Technical" xml:space="preserve">
     <value>Help with Technical Info</value>
@@ -2210,7 +2210,7 @@
     <value>Password</value>
   </data>
   <data name="Click_2_Choose" xml:space="preserve">
-    <value>Click to choose a group</value>
+    <value>Click to choose a DOS box to hold this region</value>
   </data>
   <data name="Apply_word" xml:space="preserve">
     <value>Apply</value>
@@ -2302,7 +2302,7 @@
     <value>Server Type</value>
   </data>
   <data name="Click_Database" xml:space="preserve">
-    <value>Click to set up the Database</value>
+    <value>Click to set up the MySQL Database</value>
   </data>
   <data name="Do_you_still_want_to_Stop_word" xml:space="preserve">
     <value>Do you still want to stop?</value>
@@ -2371,7 +2371,7 @@
     <value>The default 'Welcome' region  is not found in the system. Continue?</value>
   </data>
   <data name="Click_Restart" xml:space="preserve">
-    <value>Click to Set up Start/Stop</value>
+    <value>Click to Set up Start/Stop/Recycle and Crash options</value>
   </data>
   <data name="Send_Alert_Message_word" xml:space="preserve">
     <value>Send Alert Message</value>
@@ -2485,7 +2485,7 @@
     <value>Do not publish this region</value>
   </data>
   <data name="FSassets" xml:space="preserve">
-    <value>File System Assets Database</value>
+    <value>File System Database</value>
   </data>
   <data name="InstallJoomla_word" xml:space="preserve">
     <value>Install</value>
@@ -2667,7 +2667,7 @@
     <value>One region is still running</value>
   </data>
   <data name="Click_To_Load_Here" xml:space="preserve">
-    <value>Click to load the lower left corner of the file into this location.</value>
+    <value>Click to load the lower left corner of the file into this location. Regions grow up and to the right </value>
   </data>
   <data name="NameAlreadySet" xml:space="preserve">
     <value>Your system Hypergrid name has been reset. You can change the name in the Setup-Settings-&gt;DNS menu</value>
@@ -3248,6 +3248,94 @@
   </data>
   <data name="Announce_visitors" xml:space="preserve">
     <value>Announce Visitors</value>
+    <comment>yes</comment>
+  </data>
+  <data name="Click_Fsassets" xml:space="preserve">
+    <value>Click to Set up the File System Asset Database (FSassets) which is a fast and reliable database of files</value>
+    <comment>yes</comment>
+  </data>
+  <data name="Click_Setup_Jopensim" xml:space="preserve">
+    <value>Click to Setup the Optional Joomla and jOpensim CMS manager - a Web UI for Opensim</value>
+    <comment>yes</comment>
+  </data>
+  <data name="Click_to_Setup_Search" xml:space="preserve">
+    <value>Clkick to Setup Search Options for Hyperica  or JOpensim</value>
+    <comment>yes</comment>
+  </data>
+  <data name="System_Backup_Now_word" xml:space="preserve">
+    <value>Run Backup Now</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_Enable" xml:space="preserve">
+    <value>Enables Apache Web server to run as a service.</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_EnableDiva" xml:space="preserve">
+    <value>Enables a redirect of the home page to the "Dreamgrid" folder in htdocs</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_EnableJOpensim" xml:space="preserve">
+    <value>Enables a redirect of the home page to the JOpensim folder in htdocs</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_EnableOther" xml:space="preserve">
+    <value>Enables a redirect of the home page to the "Other" folder in htdocs</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_EnableWP" xml:space="preserve">
+    <value>Enables a redirect of the home page to the "WordPress" folder in htdocs</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_Other" xml:space="preserve">
+    <value>The name of the "other" folder. Must be located in Apache\htdocs folder. All web traffic to the / page will be redirected to this folder.</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_Port" xml:space="preserve">
+    <value>Typically Port 80, the WWW port.  If port 80 blocked by your ISP, 8000 is a good choice.</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Apache_Sitemap" xml:space="preserve">
+    <value>Creates a basic sitemap for search engines to find and index your grid.</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Backup_Custom" xml:space="preserve">
+    <value>Backs up the Custom Web pages folder in the Diva Web Server to a zip file</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Backup_Fsassets" xml:space="preserve">
+    <value>Backs up the FSassets  folder. Thjsi is a very large  backup. It will do an incremental backup, of just changes.</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Backup_Now" xml:space="preserve">
+    <value>Runs the selected backups now.</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Backup_Regions" xml:space="preserve">
+    <value>Backs up all the region INI files</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Backup_Settings" xml:space="preserve">
+    <value>Backs up trhe Settings.ini and XYSettings.ini files  to a zip file. These hold all setings you have ever changed</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Backup_SQL" xml:space="preserve">
+    <value>Backup MySQL to two MySQLDump files, one for robust, one for regions. This is a portable, human readioable format</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_BirdsFlockSize" xml:space="preserve">
+    <value>How manuy birds will appear, 1-100, the more biords the better the CPU and network is needed</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_BirdsMaxHeightTextBox" xml:space="preserve">
+    <value>Maximum height above ground</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Bird_Border_size" xml:space="preserve">
+    <value>How close to the sim border the birds will fly.  iff they get too close thay will fly intoi anothert sim.  And die. And die. And die until it fills up the sim</value>
+    <comment>yes</comment>
+  </data>
+  <data name="tt_Click_to_Set_Backup_Types" xml:space="preserve">
+    <value>Click to Setup Backup types.  Usually all of them should be set to On.</value>
     <comment>yes</comment>
   </data>
 </root>
