Signs simplified and combined Added boot time calculation

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3322,4 +3322,7 @@
   <data name="flag_vietnam" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_vietnam.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>seconds</value>
+  </data>
 </root>
