--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Španělština (Španělsko)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>sekundy</value>
+  </data>
 </root>
