--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Ισπανικά (Ισπανία)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>δευτερόλεπτα</value>
+  </data>
 </root>
