--- a/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spanish (Spain)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>Seconds</value>
+  </data>
 </root>
