--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-ES.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Español (España)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>segundos...</value>
+  </data>
 </root>
