--- a/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Gaztelania (Espainia)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>segundo</value>
+  </data>
 </root>
