--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fa-IR.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>اسپانیایی (اسپانیا)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>ثانیه</value>
+  </data>
 </root>
