--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Espanja (Espanja)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>sekuntia</value>
+  </data>
 </root>
