--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Espagnol (Espagne)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>secondes...</value>
+  </data>
 </root>
