--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spáinnis (an Spáinn)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>soicind</value>
+  </data>
 </root>
