--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>ספרדית (ספרד)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>שניות</value>
+  </data>
 </root>
