--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spænska (spánn)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>Sekúndur</value>
+  </data>
 </root>
