--- a/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spagnolo (Spagna)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>secondi</value>
+  </data>
 </root>
