--- a/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
@@ -2532,7 +2532,6 @@
   <data name="Theme_Black" xml:space="preserve">
     <value>Thema set to Black</value>
   </data>
-
   <data name="Theme_White" xml:space="preserve">
     <value>Thema set naar White</value>
   </data>
@@ -2877,5 +2876,8 @@
   </data>
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spaans (Spanje)</value>
+  </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>seconden</value>
   </data>
 </root>
