--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Hiszpański (Hiszpania)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>s</value>
+  </data>
 </root>
