--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Espanhol (Espanha)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>Segundos</value>
+  </data>
 </root>
