--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ru.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Испанский (Испания)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>с</value>
+  </data>
 </root>
