--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spanska (Spanien)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>sekunder</value>
+  </data>
 </root>
