--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>İspanyolca (İspanya)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>Saniye</value>
+  </data>
 </root>
