--- a/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>Spanish (Tây Ban Nha)</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>giây</value>
+  </data>
 </root>
