--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>西班牙语（西班牙）</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>秒</value>
+  </data>
 </root>
