--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-tw.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-tw.resx
@@ -2877,4 +2877,7 @@
   <data name="Spanish_Spain" xml:space="preserve">
     <value>西班牙語（西班牙）</value>
   </data>
+  <data name="Seconds_word" xml:space="preserve">
+    <value>暫時的失敗，左秒重試︰</value>
+  </data>
 </root>
