--- a/Installer_Src/Setup DreamWorld/FormEmail.eu.resx
+++ b/Installer_Src/Setup DreamWorld/FormEmail.eu.resx
@@ -119,7 +119,7 @@
   </resheader>
   <data name="EditorBox.DocumentText" xml:space="preserve">
     <value>&lt;! DOCTYPE HTML PUBLIC "- // W3C // DTD HTML 4.0 Transitional // EN"&gt;
-&lt;HTML&gt; &lt;HEAD&gt;
+&lt;HTML&gt; &lt;BURUA&gt;
 &lt;META content = "text / html; charset = unicode" http-equiv = Content-Type&gt;
 &lt;META name = GENERATOR content = "MSHTML 11.00.10570.1001"&gt; &lt;/HEAD&gt;
 &lt;BODY&gt;&lt;/BODY&gt; &lt;/HTML&gt;</value>
