--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3325,4 +3325,34 @@
   <data name="Seconds_word" xml:space="preserve">
     <value>seconds</value>
   </data>
+  <data name="Booting_word" xml:space="preserve">
+    <value>Booting</value>
+  </data>
+  <data name="Home_Stopped" xml:space="preserve">
+    <value>Home Stopped</value>
+  </data>
+  <data name="NoLogin_word" xml:space="preserve">
+    <value>No Login</value>
+  </data>
+  <data name="Pending_word" xml:space="preserve">
+    <value>Pending</value>
+  </data>
+  <data name="Quitting_word" xml:space="preserve">
+    <value>Quitting</value>
+  </data>
+  <data name="Recycling_Down_word" xml:space="preserve">
+    <value>Recycling Down</value>
+  </data>
+  <data name="Recycling_Up_word" xml:space="preserve">
+    <value>Recycling Up</value>
+  </data>
+  <data name="Restarting_Now_word" xml:space="preserve">
+    <value>Restarting Now</value>
+  </data>
+  <data name="Suspended_word" xml:space="preserve">
+    <value>Suspended</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>Waiting</value>
+  </data>
 </root>
